[package]
name = "js-engine"
version = "0.1.0"
description = "Wrapper for the wrap link standard"
authors = ["Polywrap"]
repository = "https://github.com/nerfZael/js-engine-wrapper"
license = "MIT"
edition = "2021"

[dependencies]
polywrap-wasm-rs = { version = "0.1.1" }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "=0.2.83" }
boa_engine = { features = [], version = "0.15.0", default-features = false }
getrandom = { version = "0.2.7", features = ["custom"], default-features = false }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 's'
lto = true
panic = 'abort'
